# base_any

./: Cargo.toml  README.md  build.rs
src/: decode.rs  encode.rs  lib.rs  main.rs  table.rs
table/: BASE1024.txt  BASE256.txt  BASE32.txt  BASE32HEX.txt  BASE64.txt  BASE64URL.txt  BASE8192.txt  GUA64.txt  GUA8.txt  HEX.txt
