[package]
name = "base_any"
version = "0.1.0"
edition = "2021"
authors = ["ZengYL <zeng-y-l@qq.com>"]
description = "通用的 base 系列编解码。中文编码。"
license = "MIT OR Apache-2.0"
keywords = ["decode", "encode", "no_std"]
categories = ["encoding", "no-std"]
repository = "https://github.com/zeng-y-l/base_any"
documentation = "https://docs.rs/base_any/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.5.0"
base16ct = "0.2.0"
base32 = "0.5.1"
base64 = "0.22.1"
unicode-ident = "1.0.12"

[features]
default = ["std"]
std = []
